# MultimodalInteraction_ObjDet

./: .env-sample  .gitignore  Identify_Obj_Positions_startingpoint.ipynb  Object_Detection_Basics_YOLO_OWL-ViT.ipynb  README.md  VLM_Basics.ipynb  VLM_Basics_solution.ipynb  image_analysis_audio_output_solution.ipynb  pyproject.toml  requirements.txt
