[project]
name = "multimodalinteraction-objdet"
version = "0.1.0"
description = "Multimodal interaction object detection project"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "google-genai>=1.66.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.10.0",
    "openai>=2.28.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "ultralytics>=8.3.0"
]